// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish Test File via Typescript: cjs 1`] = `
"/*! typescript-jsx-react v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var React = _interopDefault(require('react'));
var reactIntl = require('react-intl');
var Header = _interopDefault(require('components/Header'));

function MyPage() {
  return React.createElement(React.Fragment, null, React.createElement(Header, null, \\"Title\\"), React.createElement(\\"button\\", null, React.createElement(reactIntl.FormattedMessage, {
    id: \\"press-button\\"
  })));
}

exports.MyPage = MyPage;
//# sourceMappingURL=index.cjs.js.map
"
`;

exports[`Publish Test File via Typescript: esm 1`] = `
"/*! typescript-jsx-react v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
import React from 'react';
import { FormattedMessage } from 'react-intl';
import Header from 'components/Header';

function MyPage() {
  return React.createElement(React.Fragment, null, React.createElement(Header, null, \\"Title\\"), React.createElement(\\"button\\", null, React.createElement(FormattedMessage, {
    id: \\"press-button\\"
  })));
}

export { MyPage };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`Publish Test File via Typescript: types-main 1`] = `
"import { FC } from \\"react\\";
export declare function MyPage(): FC;
"
`;

exports[`Publish Test File via Typescript: umd 1`] = `
"/*! typescript-jsx-react v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports, require('react'), require('react-intl'), require('components/Header')) :
  typeof define === 'function' && define.amd ? define(['exports', 'react', 'react-intl', 'components/Header'], factory) :
  (global = global || self, factory(global['typescript-jsx-react'] = {}, global.React, global.reactIntl, global.Header));
}(this, function (exports, React, reactIntl, Header) { 'use strict';

  React = React && React.hasOwnProperty('default') ? React['default'] : React;
  Header = Header && Header.hasOwnProperty('default') ? Header['default'] : Header;

  function MyPage() {
    return React.createElement(React.Fragment, null, React.createElement(Header, null, \\"Title\\"), React.createElement(\\"button\\", null, React.createElement(reactIntl.FormattedMessage, {
      id: \\"press-button\\"
    })));
  }

  exports.MyPage = MyPage;

  Object.defineProperty(exports, '__esModule', { value: true });

}));
//# sourceMappingURL=index.umd.js.map
"
`;
